# AIAD_Casestudy

jonathanjt-222666x-aiad-casestudy/: EDA.ipynb  README.md  current_model.pkl  pyproject.toml  session_store.db
jonathanjt-222666x-aiad-casestudy/conf/base/: catalog.yml  parameters.yml
jonathanjt-222666x-aiad-casestudy/data/02_processed_data/: test_data.csv  training_data.csv
jonathanjt-222666x-aiad-casestudy/data/04_prediction_data/: test_data.csv
jonathanjt-222666x-aiad-casestudy/src/jonathanjt_222666x_aiad_casestudy/: __init__.py  __main__.py  pipeline_registry.py
jonathanjt-222666x-aiad-casestudy/src/jonathanjt_222666x_aiad_casestudy/pipelines/data_prep/: __init__.py  nodes.py  pipeline.py
jonathanjt-222666x-aiad-casestudy/src/jonathanjt_222666x_aiad_casestudy/pipelines/model/: __init__.py  nodes.py  pipeline.py
jonathanjt-222666x-aiad-casestudy/src/jonathanjt_222666x_aiad_casestudy/pipelines/prediction/: __init__.py  nodes.py  pipeline.py
