[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "jonathanjt_222666x_aiad_casestudy"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ "ipython>=8.10", "jupyterlab>=3.0", "notebook", "kedro~=0.19.9", "kedro[jupyter]", "kedro-datasets[pandas-csvdataset, pandas-exceldataset, pandas-parquetdataset, plotly-plotlydataset, plotly-jsondataset, matplotlib-matplotlibwriter]>=3.0", "kedro-viz>=6.7.0", "scikit-learn~=1.5.1", "seaborn~=0.12.1",]

[project.scripts]
jonathanjt-222666x-aiad-casestudy = "jonathanjt_222666x_aiad_casestudy.__main__:main"

[tool.kedro]
package_name = "jonathanjt_222666x_aiad_casestudy"
project_name = "jonathanjt_222666X_aiad_casestudy"
kedro_init_version = "0.19.9"
tools = "['Kedro Viz']"
example_pipeline = "True"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "jonathanjt_222666x_aiad_casestudy.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "d9077275969f44db886eb8920637a6f2"
